--- a/_posts/2019-04-25-blog.md
+++ b/_posts/2019-04-25-blog.md
@@ -1,9 +1,10 @@
 ---
 layout: post
 title: 我的博客搭建 github page
-tags: 
+tags:
 - 博客搭建
-categories: 记录
+categories:
+- 记录
 description: 为啥弄博客?大学就一直觉得自己的学习总结什么的存放一直是个问题,最近用上了mackdown....
 ---
 
