--- a/_posts/2019-04-25-blog.md
+++ b/_posts/2019-04-25-blog.md
@@ -16,6 +16,8 @@ description: 为啥弄博客?大学就一直觉得自己的学习总结什么的
 
 大学就一直觉得自己的学习总结什么的存放一直是个问题,最近用上了mackdown,然后知道github page可以搭页面博客 直接丢md就可以啦 所以就想把自己的资料放在上面方便查阅 也想留下点什么 哈哈哈!
 
+当然主要是为了未来的我在遗忘知识点的情况下, 简单的阅读一遍就可以回忆起来.所以我需要以最简洁有效的语言组织这些知识点 ! 也是对我语言总结能力 和知识理解能力的一次综合检验! 毕竟一个知识点,通过你的演绎能让其他人快速理解 你才算真的懂 才是成功的! 加油!
+
 
 
 
