--- a/_posts/2019-04-26-git.md
+++ b/_posts/2019-04-26-git.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: git总结
+title: Liunx命令/git总结
 tags:
 - git
+- Liunx
 categories:
 - notes
 description: git是分布式版本控制系统是linus弄的 这是...
@@ -26,19 +27,54 @@ git是分布式版本控制系统 是linus弄的 这是[官方地址](https://gi
 
 ---
 
-**mkdir** `文件夹名`	在当前目录下建立一个子目录
+**mkdir** `文件夹名`	在当前目录下建立一个子目录(.开头的是隐藏目录 比如 .aaa)
+
+**mkdir -p** aaa/bbb	在当前目录下创建aaa文件夹 aaa中创建bbb文件夹
 
 **cd** `目录名称`	切换目录 
 
-**ls**	显示目录内容
+**/** 的意思是:目录级别分隔符,符号前面表示的就是一个路,(同时也是根目录目录名)(路径是以/开头表示是绝对路径,不是就表示当前目录的子目录)
+
+ **.** 的意思是:当前目录
+
+**./a** 的意思是:当前目录下文件名为a的文件
 
 **pwd**	命令用于显示工作目录
 
-**ls -ah**	查看隐藏
+**ls**	显示目录内容(ls= list search) (-l 以详细的方式显示当前目录下的文件和目录 缩写为ll) (-a 显示隐藏)
+
+**mv 旧名 新名**	重命名 mv=move
+
+**mv  源目录  目标目录**	将源目录移动到目标目录下(如果目标目录存在，则是移动，如果不存在则是改名)
+
+**cp [参数] 源文件或目录 目标目录**	复制文件	-r recursion 连同子目录下所有的文件全部复制
+
+**find**	(无参/有目录名)搜索当前/指定目录和它的子目录所有的文件和目录	(-name '查询字符串')指定具体查询字符串 *****匹配多个字符 **?**匹配1个字符
+
+**rm** `文件名.txt`	删除指定文件
+
+**rm  [参数]  文件或目录1 文件或目录2**	删除文件	-r recursion 连同子目录下所有的文件全部复制	-f 强制删除，因为删除之前会有提问：yes或no，回答yes
+
+**touch 文件1 文件2**	创建文件 例如 touch my file.java
 
 **cat** `文件名.txt`	查看文件内容
 
-**vi编辑器:** **vi** `文件名.txt`	按i编辑文本按est 输入:wq! 保存文档 :q!不保存
+**more** **文件名**	分屏显示所有文件内容 回车键：一行一行显示 空格键： 一页一页显示 q:退出
+
+**head 文件名**	查看文件前10行
+
+**head -n 行数 文件名**	指定行数显示
+
+ **tail** **文件名** 	查看文件后10行
+
+**tail -n 行数 文件名**	指定行数显示后几行
+
+**less 文件名**	查看文件所有的内容	-N 显示行号 PageUp:向前翻页 PageDown:向后翻页 q: 退出
+
+
+
+
+**vi编辑器:** **vi** `文件名.txt`	或**vim** `文件名.txt`	进入命令模式 按i进入编辑文本 按est退出文本模式 在命令模式下输入: 进入底行模式 继续输入wq! 保存文档 或q!不保存
 
 按[G]：移动到文章的最后。
 
@@ -46,11 +82,174 @@ git是分布式版本控制系统 是linus弄的 这是[官方地址](https://gi
 
 按[^]：移动到a光标所在行的“行首”
 
-**rm** `文件名.txt`	删除指定文件
+命令模式下按键：
+
+| **命令** | **描述**                   |
+| -------- | -------------------------- |
+| **i**    | 在当前光标的前面插入字符   |
+| **a**    | 在当前光标的后面插入字符   |
+| **o**    | 在当前光标的下一行插入字符 |
+
+ 
+
+命令或底行模式下常用的编辑命令
+
+| **命令**        | **描述**                                 |
+| --------------- | ---------------------------------------- |
+| **yy**          | 复制当前行                               |
+| **p**           | 如果前面已经复制了，在当前下面粘贴       |
+| **dd**          | 删除当前行                               |
+| **u**           | 撤销                                     |
+| **/****字符串** | 搜索文本内容   n：向后搜索   N：向前搜索 |
+| **wq**          | 保存并退出                               |
+| **q!**          | 不保存强制退出                           |
+| **wq!**         | 强制保存退出(只读文件)                   |
+
+tar打包/压缩命令
+
+| **扩展名**     | **分类**                |
+| -------------- | ----------------------- |
+| **.zip或.rar** | 在windows下的压缩包     |
+| **.tar**       | 在Linux下的打包文件     |
+| **.gz**        | 在Linux下的压缩文件     |
+| **.tar.gz**    | 在Linux下的打包压缩文件 |
+
+| **tar [参数f] 压缩包名** **一个或多个文件** |                                                              |
+| ------------------------------------------- | ------------------------------------------------------------ |
+| 作用                                        | 对一个或多个文件进行打包并压缩                               |
+| **-c**                                      | 创建一个打包的文件（必选）                                   |
+| **-v**                                      | 显示打包的详细过程（可选）                                   |
+| **-z**                                      | 压缩文件（可选）                                             |
+| **-f <压缩文件名>**                         | 指定压缩包的文件名（必选），f要求后面紧跟着压缩的文件名，一般放在参数最后面 |
+
+解压
+
+| 语法1：tar [参数] 压缩文件 |
+| -------------------------- |
+| 解压文件到当前目录         |
+
+ 
+
+| **语法2：tar [参数]** **压缩文件 -C** **目录** |                            |
+| ---------------------------------------------- | -------------------------- |
+| **解压文件到指定的目录**                       |                            |
+| **-x**                                         | 解压指定的文件【必选】     |
+| **-v**                                         | 显示解压详细过程【可选】   |
+| **-f<压缩文件>**                               | 指定要解压的文件【必选】   |
+| **-C**                                         | 解压到指定的目录下【可选】 |
+
+查看进程
+
+| **ps  [参数]** |                                          |
+| -------------- | ---------------------------------------- |
+| **无参**       | **显示当前用户通过终端启动的进程**       |
+| **-a**         | 显示所有用户通过终端启动的进程           |
+| **-u**         | 显示所有用户通过终端启动的进程的详细信息 |
+| **-x**         | 显示所有用户的所有进程                   |
+
+**top**	查看系统整体内存、cpu耗用情况
+
+杀死进程
+
+| **kill  [参数]**  **进程号**(pid) |                      |
+| --------------------------------- | -------------------- |
+| **进程号**                        | 通过ps可以查到进程号 |
+| **-9**                            | 强制中止进程         |
+
+搜索文件内容
+
+grep是一种强大的文本搜索工具，它能使用字符串搜索文本，并把匹配的行和行号打印出来。
+
+| **grep  [参数]** **字符串** **文件名** |                          |
+| -------------------------------------- | ------------------------ |
+| **作用**                               | 搜索指定文件中字符串内容 |
+| **-n**                                 | 搜索结果中显示行号       |
+| **-v**                                 | 显示不匹配的行           |
+| **-i**                                 | 忽略大小写搜索           |
+
+## 管道
+
+| **语法** | **命令1 \|** **命令2**                                       |
+| -------- | ------------------------------------------------------------ |
+| **解释** | 管道命令符 \| ，必须要有两条以上的命令参与操作。将第1个命令的执行结果，做为第2个命令的参数，继续进行下一个操作。 |
 
 **ssh-keygen -t rsa -C** `"mail@example.com"`	创建SSH Key 
 
+**shutdown now **	立刻关机
 
+**reboot**	重启
+
+**date**	输出系统当前时间
+
+添加权限
+
+###  权限的范围
+
+| **权限范围** | **说明**                      |
+| ------------ | ----------------------------- |
+| **u**        | User 属主，文件和目录的拥有者 |
+| **g**        | Group 属组，拥有者所在的组    |
+| **o**        | Other 其他用户                |
+| **a**        | All 所有的用户                |
+
+## 权限控制
+
+| **对指定的文件或目录，给用户或组赋予权限。多种类型的用户之间使用逗号分隔** |
+| ------------------------------------------------------------ |
+| **chmod** **用户或组+权限** **目录或文件**            增       |
+| **chmod** **用户或组=权限** **目录或文件**            改   |
+| **chmod** **用户或组-权限** **目录或文件**             删      |
+
+
+
+## crontab定时任务
+
+通过crontab 命令，我们可以在固定的时间间隔执行指定的命令。时间间隔的单位可以是分、时、日、月、周及它们的组合。这个命令非常适合做周期性的工作，如：数据备份，程序的自动运行。
+
+| **crontab [参数]** |                                                 |
+| ------------------ | ----------------------------------------------- |
+| **-l**             | 显示当前用户所有的定时任务                      |
+| **-e**             | 使用vim编辑当前用户的定时任务，一行一个定时任务 |
+| **-r**             | 删除当前用户的定时任务                          |
+
+crontab -e 会启动vi编辑器 编辑器内输入* * * * * date >> /root/mydate.log 启动一个定时任务退出vi立即生效
+\* * * * * date	依次为如下
+
+| **分** **时** **日** **月** **周** **命令** |                                                              |
+| ------------------------------------------- | ------------------------------------------------------------ |
+| **minute**                                  | 表示分钟，可以是从0到59之间的任何整数。                      |
+| **hour**                                    | 表示小时，可以是从0到23之间的任何整数。                      |
+| **day**                                     | 表示日期，可以是从1到31之间的任何整数。                      |
+| **month**                                   | 表示月份，可以是从1到12之间的任何整数。                      |
+| **week**                                    | 表示星期几，可以是从0到7之间的任何整数，0或7代表星期日，1-6表示星期一到六。 |
+| **command**                                 | 要执行的命令                                                 |
+
+| **星号（\*）**  | **代表所有可能的值。如：用在月字段上表示每月执行，用在分字段上表示每分执行** |
+| --------------- | ------------------------------------------------------------ |
+| **逗号（,）**   | 用逗号隔开的值指定某几个时间点。如：用在小时字段“1,2,5”表示1点，2点，5点 |
+| **短横（-）**   | 表示一个整数范围，如：用在日上“2-6”表示“2号到6号”            |
+| **正斜杠（/）** | 指定时间的间隔频率。如：   用在小时上“0-10/2”表示0点到10点中每两小时执行一次。   与星号一起使用，例如*/10，如果用在分钟字段，表示每10分钟执行一次。 |
+
+###  定时服务管理的命令
+
+| **crond****服务管理命令**     | **说明**                                       |
+| ----------------------------- | ---------------------------------------------- |
+| **systemctl   start crond**   | 启动定时服务crond.service                      |
+| **systemctl stop   crond**    | 停止定时服务crond.service                      |
+| **systemctl   status crond**  | 查看crond.service服务的状态                    |
+| **systemctl restart   crond** | 重启定时服务，相当于先stop再start              |
+| **systemctl   reload crond**  | 不停止定时器，重新加载新的配置文件，使其生效。 |
+
+##  设置后台服务的自启动配置
+
+| **命令**                                         | **说明**                     |
+| ------------------------------------------------ | ---------------------------- |
+| **systemctl   list-units \*.service**            | 查看服务运行状态             |
+| **systemctl list-unit-files   --type=service**   | 查询所有服务的开机状态       |
+| **systemctl enable** **服务名**                  | 设置某个服务开机自启动       |
+| **systemctl disable** **服务名**                 | 设置某个服务器开机不自动启动 |
+| **systemctl   is-enabled** **服务名**            | 查询指定服务器开机启动状态   |
+| **systemctl list-unit-files** **服务名.service** | 查询指定服务器开机启动状态   |
 
 #### Git命令
 
