--- a/_posts/2019-05-24-regex.md
+++ b/_posts/2019-05-24-regex.md
@@ -117,7 +117,30 @@ $	匹配字符串的结束
 ## html5表单中使用正则表达式
 
 ```html
-<input type="tel" required="required" pattern="^1([3-5]|[7-8])\d{9}$"/>
+<input type="tel" required="required" pattern="^1([3-5]|[7-8])\d{9}$" oninvalid="setCustomValidity('不是电话号码')" oninput="setCustomValidity('')"/>
+<!-- oninvalid：提交的input元素的值为无效值时（这里是正则验证失败），触发oninvalid事件。oninvalid属于Form 事件。setCustomValidity() 这个是HTML5内置的JS方法，用来自定义提示信息 -->
+
+<!-- 这样必须页面submit才有效 如果用在js异步上可以监听提交事件-->
+
+<script type="text/javascript">
+    jQuery("#registerForm").on("submit",function (event) {
+        event.preventDefault();//取消提交
+        jQuery.post({
+            url:"UserServlet",
+            data:$("#registerForm").serialize(),
+            success:function (resulet) {
+                if (resulet=='true') {
+                    location.href="register_ok.html";
+                }else{
+                    jQuery("#msg").text(resulet);
+                }
+            },
+            error:function () {
+                alert("服务器忙...");
+            }
+        });
+    });
+</script>
 ```
 
 ## java中使用正则表达式
@@ -137,4 +160,7 @@ boolean t1 = matcher.matches();
 ```javascript
 var a = new RegExp("^[a-zA-Z]+$");
 var booleanvaluse = a.test("a");
+
+var reg = /^[a-zA-Z]\w{5,17}$/;
+var booleanvalusereg2.test(username);
 ```
