--- a/_posts/2019-04-26-linux_git.md
+++ b/_posts/2019-04-26-linux_git.md
@@ -391,7 +391,7 @@ systemctl restart firewalld**
 
 **useradd `参数` `用户名`**	添加用户	-m 在/home目录下建立用户主目录，主目录名字就是用户名
 
-<组名> 创建用户并且指定它所在的主组，如果没有指定组名，默认创建一个与用户同名的主组。创建好的用户信息保存在/etc/passwd文件中
+组名  创建用户并且指定它所在的主组，如果没有指定组名，默认创建一个与用户同名的主组。创建好的用户信息保存在/etc/passwd文件中
 
 **passwd `用户名`**	修改密码	无参 修改自己的密码	有用户名参数 管理员可以修改其它用户的密码
 
